--- a/docs_src/design/adr/core/0022-UoM.md
+++ b/docs_src/design/adr/core/0022-UoM.md
@@ -56,7 +56,7 @@ The units of measure can be categorized for better organization and to allow for
 
 #### External UoM definition
 
-When the units of measure are specified in a separate (i.e. external definition) file, the location of the UoM file will be specified in core metadata's configuration (currently in `res/configuration.toml`) - see example A below.  
+When the units of measure are specified in a separate (i.e. external definition) file, the location of the UoM file (specified by URI) will be specified in core metadata's configuration (currently in `res/configuration.toml`) - see example A below.  
 
 **Example A Metadata Configuration - external definition of UoM**
 ``` toml
@@ -66,13 +66,16 @@ When the units of measure are specified in a separate (i.e. external definition)
 
 ## in the non-writable area - example external file specified to units of measure
 [UoM]
-    UoMFile="/tmp/edgex/metadata/uom.toml"
+    UoMFile="file::/tmp/edgex/metadata/uom.toml"  # the UoMFile location is specified as a URI.
 ```
 
-The location of the external UoM file should be located in a shared volume or file space in order to allow for the adopter to provide the units of measure independently during configuration/setup of the EdgeX instance without requiring a build of the metadata service or a reconstruction of the Docker image/container.
+The location of the external UoM file (specified by URI) should point to an accessible website, shared volume, volume mount, etc. in order to allow for the adopter to provide the units of measure independently during configuration/setup of the EdgeX instance without requiring a build of the metadata service or a reconstruction of the Docker image/container.
 
 !!! Info
-        In future versions, multiple external UoM definition files might be specified or use of inline and exteral files might be allowed simultaneously.  This may help the organization of the units in the future.  In the first iteration of this functionality, either one external file *or* inline definition is allowed.
+        In future versions, multiple external UoM definition files might be specified or use of inline and external files might be allowed simultaneously.  This may help the organization of the units in the future.  In the first iteration of this functionality, either one external file *or* inline definition is allowed.
+
+!!! Note
+    When the units of measures is provided by external UoM definition file, then *environmental overrides can be used to specify and override the location of the external configuration file*.
 
 #### Inline UoM definition
 When the units of measure are specified directly in metadata's configuration file (i.e. inline definition), the actual units of measure are provided in core metadata's configuration (currently in `res/configuration.toml`) - see example B below.  
@@ -94,8 +97,15 @@ When the units of measure are specified directly in metadata's configuration fil
     values="lbs,ounces,kilos,grams"
 ```
 
+!!! Note
+    When the units of measure are defined in-line, then *environmental overrides can be used to specify and override the units of measure in the configuration.toml file*.  However, since the Uom is a map, the unit of measure category must already exist in order to be overridden.  In the example above, you could provide an environmental override to replace `Uom.weights` but you could not provide an override for `Uom.speed` as it does not exist in the original configuration file.
+
 #### Specifying Validation on or off
 Additionally, in either external or inline definition, a configuration option for unit of measure validation being `on` or `off` will be provided (note `validation` in both example A and B above).  The units of measure or the location of the UoM file is static, but the ability to turn validation on/off is dynamic and therefore in the writable area of configuration.  For backward compatibility, validation will be off by default.
+
+Again, when a device resource does not have a `units` specified, this is still considered "valid".  So in reality, the diagram below specifies how validation is done by core metadata.
+
+![image](EdgeX_UoM_Validation.png)
 
 ### Validation of the Units of Measure
 
@@ -104,6 +114,9 @@ Core metadata will read the units of measure from its configuration (either inli
 When validation is turned `on` (Writable.UoM.validation is set to true), all device profile `units` (in device resource, device properties) will be validated against the list of units of measure by core metadata.  In other words, when a device profile is created or updated or when a device resource is added or updated via the core metadata API, the units specified in the device resource's `units` field (see resource example below) will be checked against the valid list of UoM provided via core metadata configuration.  If the `units` value matches any one of the configuration units of measure, then the device resource is considered valid - allowing the create or update operation to continue.  
 
 If the `units` value does not match any one of the configuration units of measure, then the device profile or device resource operation (create or update) is rejected (error code 500 is returned) and an appropriate error message is returned in the response to the caller of the core metadata API.
+
+!!! Note
+    Importantly (as discussed in Core WG 2/17/22), the `units` field on a profile is and shall remain optional.  If the `units` field is not specified in the device profile, then it is assumed that the device resource does not have well defined units of measure.  In other words, core metadata will not fail a profile with no `units` field specified on a device resource.
 
 In the example device resource below, core metadata would check that `C` is in the list of units of measure in the configuration.
 
@@ -122,7 +135,7 @@ deviceResources:
     units: "C"    ## core metadata checks this value against its list of valid units of measure
 ```
 
-By checking the `units` property of the device resources (on creation or updates of the device profile or create/update of the device resources), and rejecting any additions or changes that include non-valid units of measure, then we can be assured that all readings created by the device service will contain valid units by default (assuming that validation of the units of measure is always on).
+By checking the `units` property of the device resources (on creation or updates of the device profile or create/update of the device resources), and rejecting any additions or changes that include non-valid units of measure, then we can be assured that all readings created by the device service will contain valid units by default (assuming that validation of the units of measure is always on) or that the units are inconsequential (when the `units` field is not specified for a device resource).
 
 ## Considerations
 
@@ -158,8 +171,16 @@ However, on the basis of "unit of measure", SenML is actually light on details. 
 
 Therefore, SenML should be examined for future versions of EdgeX with regard to data model, but its relevance to **unit of measure** is believed to be minimal at this time.
 
+### Future Considerations/Additions/Improvements
+
+In the future, validation may be turned `on` or `off` per device service; allowing the decision to validate units of measure to be accomplished on a service or even allow the device service to validate/not validate based on particular devices.
+
+In the future, additional criteria may be added to the unit of measure information to all for more specific (or allowing more granularity) validation.  For example, the category of units of measure could be specified in a device resource so that a profile's units are validated against specific sources or collections of unit of measure.
+
+Use of URI to specify the unit of measures, when using external UoM definitions, is novel with regard to providing EdgeX information.  Per core working group of 2/17/22, we are looking to use a URI to specify an external configuration file to specify UoM.  If this is successful, this URI mechanism may be used to point to device profiles, configuration files, and other information in the future.  This would even allow multiple EdgeX instances to use the same configuration or profile (multiple EdgeX instances using the same URI to use a shared profile for example).
+
 ## Consequences
-- Validation could impact performance.  Therefore allowing it to be turned on or off is critical to some use cases.  However, it will only impact performance of profile creation/updates (and associated device resources).
+- Validation could impact performance.  Therefore allowing it to be turned on or off is critical to some use cases.  However, it will only impact performance of profile creation/updates (and associated device resources) in core metadata.
 
 ## References
 
