feat(adr): addressed review comments from Canonical
Signed-off-by: jpwhitemn <jpwhite_mn@yahoo.com>

--- a/docs_src/design/adr/core/0022-UoM.md
+++ b/docs_src/design/adr/core/0022-UoM.md
@@ -4,7 +4,7 @@
 
 **Proposed** (as of 2/9/22)
 
-This ADR began under a different ADR pull request.  The prior ADR recommended a UoM per device resource and just allowed for the association of an arbitrary set of unit of measure references against the resource.  However, it did not include any specific units of measure or validation of those units against the actual profiles (and ultimately the associated readings). See the [metrics collection ADR](https://github.com/edgexfoundry/edgex-docs/pull/268) for details and prior debate.
+This ADR began under a different ADR pull request.  The prior ADR recommended a UoM per device resource and just allowed for the association of an arbitrary set of unit of measure references against the resource.  However, it did not include any specific units of measure or validation of those units against the actual profiles (and ultimately the associated readings). See the [previous UoM ADR](https://github.com/edgexfoundry/edgex-docs/pull/386) for details and prior debate.
 
 Implementation: to be determined, but could be as soon as Kamakura (Spring 2022).
 
@@ -34,7 +34,7 @@ Therefore, EdgeX chooses not to select or adopt a unit of measure specification,
 
 Units of measure allowed by the instance of EdgeX will be specified in a configuration file (in TOML format).  This can either be specified directly in the core metadata configuration file (but then hard to change when using a containerized or snap form of the application) or in a separate and external configuration TOML file (making it easier for an adopter to provide units of measure even when the application is containerized or snapped up).  
 
-The units of measure in the configuration file can be attributed, optionally, to a specification, document, or other UoM definition source.  The `source` only helps provide the location of documentation about the origins and details of the units specified for the reader, but it will not be used or checked by EdgeX.  An optional default source can be provided at the top level configuration (as shown in the examples below) so that other sources are only need when there specific units used that are not found in the default source.
+The units of measure in the configuration file can be attributed, optionally, to a specification, document, or other UoM definition source.  The `source` only helps provide the location of documentation about the origins and details of the units specified for the reader, but it will not be used or checked by EdgeX.  An optional default source can be provided at the top level configuration (as shown in the examples below) so that other sources are only needed when there are specific units used that are not found in the default source.
 
 The units of measure can be categorized for better organization and to allow for different sources to be specified for different units.  The categories are defined by the TOML section names (the UoM dot labels).
 
@@ -51,9 +51,6 @@ The units of measure can be categorized for better organization and to allow for
     values="lbs,ounces,kilos,grams"
 ```
 
-!!! Note
-        In the future, the source may be used by EdgeX to dynamically pull in units of measure rather than explicitly listing them in a configuration file.  As there is no standard for this type of data exchange today, this goes beyond the complexity of EdgeX needs, and would be left to the adopter to implement this at their discretion if desired.
-
 #### External UoM definition
 
 When the units of measure are specified in a separate (i.e. external definition) file, the location of the UoM file (specified by URI) will be specified in core metadata's configuration (currently in `res/configuration.toml`) - see example A below.  
@@ -62,11 +59,11 @@ When the units of measure are specified in a separate (i.e. external definition)
 ``` toml
 [Writable]
     [Writable.UoM]
-    validation=off  ## off by default
+    validation=false  ## false (meaning off) by default
 
 ## in the non-writable area - example external file specified to units of measure
 [UoM]
-    UoMFile="file::/tmp/edgex/metadata/uom.toml"  # the UoMFile location is specified as a URI.
+    UoMFile="file://tmp/edgex/metadata/uom.toml"  # the UoMFile location is specified as a URI.
 ```
 
 The location of the external UoM file (specified by URI) should point to an accessible website, shared volume, volume mount, etc. in order to allow for the adopter to provide the units of measure independently during configuration/setup of the EdgeX instance without requiring a build of the metadata service or a reconstruction of the Docker image/container.
@@ -84,7 +81,7 @@ When the units of measure are specified directly in metadata's configuration fil
 ``` toml
 [Writable]
     [Writable.UoM]
-    validation=false  ## off by default
+    validation=false  ## false (off) by default
 
 ## in the non-writable area - example inline units of measure
 [Uom]
@@ -102,6 +99,9 @@ When the units of measure are specified directly in metadata's configuration fil
 
 #### Specifying Validation on or off
 Additionally, in either external or inline definition, a configuration option for unit of measure validation being `on` or `off` will be provided (note `validation` in both example A and B above).  The units of measure or the location of the UoM file is static, but the ability to turn validation on/off is dynamic and therefore in the writable area of configuration.  For backward compatibility, validation will be off by default.
+
+!!! Note
+    `on` and `off` are specified by boolean values `true` and `false` in the configuration file.
 
 Again, when a device resource does not have a `units` specified, this is still considered "valid".  So in reality, the diagram below specifies how validation is done by core metadata.
 
@@ -164,12 +164,14 @@ measurement for a sensor named "urn:dev:ow:10e2073a01080063" with a current valu
 
 In this way, the parallels to EdgeX model are, by accident, uncanny - at least in the JSON instance.  SenML goes to much more depth to provide extensions and more definitions around measurements.  But at its base, the EdgeX format is not unlike SenML and could easily be aligned with SenML in the future (or allow for an application service to export in SenML with an additional function fairly easily and if there were demand).
 
-However, on the basis of "unit of measure", SenML is actually light on details.  This ADR and the proposal here goes much further than what SenML specifies.  With regard to UoM, the SenML specification only says:
+However, on the basis of "unit of measure", SenML is actually light on details.  With regard to UoM, the SenML specification only says:
 
 !!! Quote
     If the Record has no Unit, the Base Unit is used as the Unit.  Having no Unit and no Base Unit is allowed; any information that may be required about units applicable to the value then needs to be provided by the application context.
 
-Therefore, SenML should be examined for future versions of EdgeX with regard to data model, but its relevance to **unit of measure** is believed to be minimal at this time.
+A SenML Units Registry provides for a list of unit symbols (the ["SenML Units registry"](https://datatracker.ietf.org/doc/html/rfc8428#section-12.1)).  This list could be used as one of the sources for EdgeX UoM definition.
+
+SenML should be examined for future versions of EdgeX with regard to data model, but its relevance to **unit of measure** is believed to be minimal at this time.
 
 ### Future Considerations/Additions/Improvements
 
@@ -191,6 +193,8 @@ Use of URI to specify the unit of measures, when using external UoM definitions,
 - https://en.wikipedia.org/wiki/Unified_Code_for_Units_of_Measure
 - https://www.ogc.org/standards/sensorthings
 - https://datatracker.ietf.org/doc/html/rfc8428
+- https://datatracker.ietf.org/doc/html/rfc8428#section-12.1
+
 
 ### UoM Tools and Databases
 - https://ucum.nlm.nih.gov/ucum-lhc/demo.html
