feat(adr): corrections based on @lenny-intel comments during core wg meeting of 2-24-22
Signed-off-by: jpwhitemn <jpwhite_mn@yahoo.com>

--- a/docs_src/design/adr/core/0022-UoM.md
+++ b/docs_src/design/adr/core/0022-UoM.md
@@ -42,13 +42,13 @@ The units of measure can be categorized for better organization and to allow for
 
 ``` toml
 [Uom]
-    source="reference to source for all UoM if not specified below"
+    Source="reference to source for all UoM if not specified below"
     [Uom.temperature]
-    source="www.weather.com"
-    values="C,F,K"
+    Source="www.weather.com"
+    Values="C,F,K"
     [Uom.weights]
-    source="www.usa.gov/federal-agencies/weights-and-measures-division"
-    values="lbs,ounces,kilos,grams"
+    Source="www.usa.gov/federal-agencies/weights-and-measures-division"
+    Values="lbs,ounces,kilos,grams"
 ```
 
 #### External UoM definition
@@ -59,7 +59,7 @@ When the units of measure are specified in a separate (i.e. external definition)
 ``` toml
 [Writable]
     [Writable.UoM]
-    validation=false  ## false (meaning off) by default
+    Validation=false  ## false (meaning off) by default
 
 ## in the non-writable area - example external file specified to units of measure
 [UoM]
@@ -81,24 +81,24 @@ When the units of measure are specified directly in metadata's configuration fil
 ``` toml
 [Writable]
     [Writable.UoM]
-    validation=false  ## false (off) by default
+    Validation=false  ## false (off) by default
 
 ## in the non-writable area - example inline units of measure
 [Uom]
-    source="reference to source for all UoM if not specified below"
+    Source="reference to source for all UoM if not specified below"
     [Uom.temperature]
-    source="www.weather.com"
-    values="C,F,K"
+    Source="www.weather.com"
+    Values="C,F,K"
     [Uom.weights]
-    source="www.usa.gov/federal-agencies/weights-and-measures-division"
-    values="lbs,ounces,kilos,grams"
+    Source="www.usa.gov/federal-agencies/weights-and-measures-division"
+    Values="lbs,ounces,kilos,grams"
 ```
 
 !!! Note
-    When the units of measure are defined in-line, then *environmental overrides can be used to specify and override the units of measure in the configuration.toml file*.  However, since the Uom is a map, the unit of measure category must already exist in order to be overridden.  In the example above, you could provide an environmental override to replace `Uom.weights` but you could not provide an override for `Uom.speed` as it does not exist in the original configuration file.
+    When the units of measure are defined in-line, then *environmental overrides can be used to specify and override the units of measure in the configuration.toml file*.  However, since the Uom is a map, the unit of measure category must already exist in order to be overridden.  In the example above, you could provide an environmental override to replace the `Source` or `Values` of `Uom.weights` but you could not add a new section for `Uom.speed` with new `Source` and `Values` as it does not exist in the original configuration file.  In other words, env overrides allow you to change existing configuration but not add new configuration.
 
 #### Specifying Validation on or off
-Additionally, in either external or inline definition, a configuration option for unit of measure validation being `on` or `off` will be provided (note `validation` in both example A and B above).  The units of measure or the location of the UoM file is static, but the ability to turn validation on/off is dynamic and therefore in the writable area of configuration.  For backward compatibility, validation will be off by default.
+Additionally, in either external or inline definition, a configuration option for unit of measure validation being `on` or `off` will be provided (note `Validation` in both example A and B above).  The units of measure or the location of the UoM file is static, but the ability to turn validation on/off is dynamic and therefore in the writable area of configuration.  For backward compatibility, validation will be off by default.
 
 !!! Note
     `on` and `off` are specified by boolean values `true` and `false` in the configuration file.
