feat(adr): allow relative path per farshid comment
Signed-off-by: jpwhitemn <jpwhite_mn@yahoo.com>

--- a/docs_src/design/adr/core/0022-UoM.md
+++ b/docs_src/design/adr/core/0022-UoM.md
@@ -63,10 +63,10 @@ When the units of measure are specified in a separate (i.e. external definition)
 
 ## in the non-writable area - example external file specified to units of measure
 [UoM]
-    UoMFile="file://tmp/edgex/metadata/uom.toml"  # the UoMFile location is specified as a URI.
+    UoMFile="file://tmp/edgex/metadata/uom.toml"  # the UoMFile location is specified as a URI or a relative path.
 ```
 
-The location of the external UoM file (specified by URI) should point to an accessible website, shared volume, volume mount, etc. in order to allow for the adopter to provide the units of measure independently during configuration/setup of the EdgeX instance without requiring a build of the metadata service or a reconstruction of the Docker image/container.
+The location of the external UoM file (specified by URI) should point to an accessible website, shared volume, volume mount, etc. in order to allow for the adopter to provide the units of measure independently during configuration/setup of the EdgeX instance without requiring a build of the metadata service or a reconstruction of the Docker image/container.  Use of relative path (over URI)is acceptable (example: `UoMFile="./uom.toml`).
 
 !!! Info
         In future versions, multiple external UoM definition files might be specified or use of inline and external files might be allowed simultaneously.  This may help the organization of the units in the future.  In the first iteration of this functionality, either one external file *or* inline definition is allowed.
