feat(adr): removed URI concept from the ADR
per monthly architects meeting - decision to keep external file location to a file path reference and not use URIs at this time

URIs an EdgeX 3.0 consideration

Signed-off-by: jpwhitemn <jpwhite_mn@yahoo.com>

--- a/docs_src/design/adr/core/0022-UoM.md
+++ b/docs_src/design/adr/core/0022-UoM.md
@@ -32,7 +32,7 @@ Therefore, EdgeX chooses not to select or adopt a unit of measure specification,
 
 ### Specifying the Units of Measure
 
-Units of measure allowed by the instance of EdgeX will be specified in a configuration file (in TOML format).  This can either be specified directly in the core metadata configuration file (but then hard to change when using a containerized or snap form of the application) or in a separate and external configuration TOML file (making it easier for an adopter to provide units of measure even when the application is containerized or snapped up).  
+Units of measure allowed by the instance of EdgeX will be specified in a configuration file (in TOML format).  This can either be specified directly in the core metadata configuration file (but then hard to change when using a containerized or snap form of the application) or in a separate and external configuration TOML file (making it easier for an adopter to provide units of measure even when the application is containerized).  
 
 The units of measure in the configuration file can be attributed, optionally, to a specification, document, or other UoM definition source.  The `source` only helps provide the location of documentation about the origins and details of the units specified for the reader, but it will not be used or checked by EdgeX.  An optional default source can be provided at the top level configuration (as shown in the examples below) so that other sources are only needed when there are specific units used that are not found in the default source.
 
@@ -53,7 +53,7 @@ The units of measure can be categorized for better organization and to allow for
 
 #### External UoM definition
 
-When the units of measure are specified in a separate (i.e. external definition) file, the location of the UoM file (specified by URI) will be specified in core metadata's configuration (currently in `res/configuration.toml`) - see example A below.  
+When the units of measure are specified in a separate (i.e. external definition) file, the location of the UoM file will be specified in core metadata's configuration (currently in `res/configuration.toml`) - see example A below.  
 
 **Example A Metadata Configuration - external definition of UoM**
 ``` toml
@@ -63,16 +63,19 @@ When the units of measure are specified in a separate (i.e. external definition)
 
 ## in the non-writable area - example external file specified to units of measure
 [UoM]
-    UoMFile="file://tmp/edgex/metadata/uom.toml"  # the UoMFile location is specified as a URI or a relative path.
+    UoMFile="/tmp/edgex/metadata/uom.toml"  # the UoMFile location can be either absolute or relative path location
 ```
 
-The location of the external UoM file (specified by URI) should point to an accessible website, shared volume, volume mount, etc. in order to allow for the adopter to provide the units of measure independently during configuration/setup of the EdgeX instance without requiring a build of the metadata service or a reconstruction of the Docker image/container.  Use of relative path (over URI)is acceptable (example: `UoMFile="./uom.toml`).
+The location of the external UoM file should point to an accessible file (relative to application executable or absolute path).  The file must be something that the service can reach (ex: in shared volume, volume mount, etc.) in order to allow for the adopter to provide the units of measure independently during configuration/setup of the EdgeX instance without requiring a build of the metadata service or a reconstruction of the Docker image/container.
 
 !!! Info
         In future versions, multiple external UoM definition files might be specified or use of inline and external files might be allowed simultaneously.  This may help the organization of the units in the future.  In the first iteration of this functionality, either one external file *or* inline definition is allowed.
 
 !!! Note
     When the units of measures is provided by external UoM definition file, then *environmental overrides can be used to specify and override the location of the external configuration file*.
+
+!!! Info
+        It was discussed that the file location could be done via URI and even allow for HTTP, HTTPS or other protocol access of the file.  For this first implementation, it was decided (per Monthly Architect's meeting of 2/28/22) to only allow for a simple file path reference (relative or absolute).  Future implementation can consider URI use.
 
 #### Inline UoM definition
 When the units of measure are specified directly in metadata's configuration file (i.e. inline definition), the actual units of measure are provided in core metadata's configuration (currently in `res/configuration.toml`) - see example B below.  
@@ -179,7 +182,7 @@ In the future, validation may be turned `on` or `off` per device service; allowi
 
 In the future, additional criteria may be added to the unit of measure information to all for more specific (or allowing more granularity) validation.  For example, the category of units of measure could be specified in a device resource so that a profile's units are validated against specific sources or collections of unit of measure.
 
-Use of URI to specify the unit of measures, when using external UoM definitions, is novel with regard to providing EdgeX information.  Per core working group of 2/17/22, we are looking to use a URI to specify an external configuration file to specify UoM.  If this is successful, this URI mechanism may be used to point to device profiles, configuration files, and other information in the future.  This would even allow multiple EdgeX instances to use the same configuration or profile (multiple EdgeX instances using the same URI to use a shared profile for example).
+Use of URI to specify the unit of measures, when using external UoM definitions, is novel with regard to providing EdgeX information.  Per core working group of 2/17/22 and then again at the monthly architect's meeting of 2/28/22, we may look to use a URI to specify an external configuration file to specify UoM in the future.  Indeed, URIs may be used (an EdgeX 3.0 consideration) to point to device profiles, configuration files, and other information in the future.  This would even allow multiple EdgeX instances to use the same configuration or profile (multiple EdgeX instances using the same URI to use a shared profile for example).
 
 ## Consequences
 - Validation could impact performance.  Therefore allowing it to be turned on or off is critical to some use cases.  However, it will only impact performance of profile creation/updates (and associated device resources) in core metadata.
