--- a/docs_src/design/adr/core/0022-UoM.md
+++ b/docs_src/design/adr/core/0022-UoM.md
@@ -32,7 +32,7 @@ Therefore, EdgeX chooses not to select or adopt a unit of measure specification,
 
 ### Specifying the Units of Measure
 
-Units of measure allowed by the instance of EdgeX will be specified in a configuration file (in TOML format).  This can either be specified directly in the core metadata configuration file (but then hard to change when using a containerized or snap form of the application) or in a separate and external configuration TOML file (making it easier for an adopter to provide units of measure even when the application is containerized).  
+Units of measure allowed by the instance of EdgeX will be specified in a configuration file (in TOML format called `uom.toml` by default).  Note:  the UoM configuration is a separate configuration TOML file (separate from the metadata service configuration file - `configuration.toml`).  
 
 The units of measure in the configuration file can be attributed, optionally, to a specification, document, or other UoM definition source.  The `source` only helps provide the location of documentation about the origins and details of the units specified for the reader, but it will not be used or checked by EdgeX.  An optional default source can be provided at the top level configuration (as shown in the examples below) so that other sources are only needed when there are specific units used that are not found in the default source.
 
@@ -51,70 +51,46 @@ The units of measure can be categorized for better organization and to allow for
     Values="lbs,ounces,kilos,grams"
 ```
 
-#### External UoM definition
+#### Specifying the UoM File Location
 
-When the units of measure are specified in a separate (i.e. external definition) file, the location of the UoM file will be specified in core metadata's configuration (currently in `res/configuration.toml`) - see example A below.  
+The location of the UoM file will be specified in core metadata's configuration (currently in `res/configuration.toml`) - see example A below.  
 
-**Example A Metadata Configuration - external definition of UoM**
+**Example Metadata Configuration - location of of the UoM configuration file**
 ``` toml
 [Writable]
     [Writable.UoM]
     Validation=false  ## false (meaning off) by default
 
-## in the non-writable area - example external file specified to units of measure
+## in the non-writable area - example file specified to units of measure
 [UoM]
-    UoMFile="/tmp/edgex/metadata/uom.toml"  # the UoMFile location can be either absolute or relative path location
+    UoMFile="./res/uom.toml"  # the UoMFile location can be either absolute or relative path location
 ```
 
-The location of the external UoM file should point to an accessible file (relative to application executable or absolute path).  The file must be something that the service can reach (ex: in shared volume, volume mount, etc.) in order to allow for the adopter to provide the units of measure independently during configuration/setup of the EdgeX instance without requiring a build of the metadata service or a reconstruction of the Docker image/container.
+The location of the UoM file should point to an accessible file (relative to application executable or absolute path).  The file must be something that the service can reach (ex: in shared volume, volume mount, etc.) in order to allow for the adopter to provide the units of measure independently during configuration/setup of the EdgeX instance without requiring a build of the metadata service or a reconstruction of the Docker image/container.
 
 !!! Info
-        In future versions, multiple external UoM definition files might be specified or use of inline and external files might be allowed simultaneously.  This may help the organization of the units in the future.  In the first iteration of this functionality, either one external file *or* inline definition is allowed.
+        In future versions, multiple UoM definition files might be specified.  This may help the organization of the units in the future.
 
 !!! Note
-    When the units of measures is provided by external UoM definition file, then *environmental overrides can be used to specify and override the location of the external configuration file*.
+    The *environmental overrides can be used to specify and override the location of the UoM configuration file*.
 
 !!! Info
         It was discussed that the file location could be done via URI and even allow for HTTP, HTTPS or other protocol access of the file.  For this first implementation, it was decided (per Monthly Architect's meeting of 2/28/22) to only allow for a simple file path reference (relative or absolute).  Future implementation can consider URI use.
 
-#### Inline UoM definition
-When the units of measure are specified directly in metadata's configuration file (i.e. inline definition), the actual units of measure are provided in core metadata's configuration (currently in `res/configuration.toml`) - see example B below.  
-
-**Example B Metadata Configuration - inline definition of UoM**
-``` toml
-[Writable]
-    [Writable.UoM]
-    Validation=false  ## false (off) by default
-
-## in the non-writable area - example inline units of measure
-[Uom]
-    Source="reference to source for all UoM if not specified below"
-    [Uom.temperature]
-    Source="www.weather.com"
-    Values="C,F,K"
-    [Uom.weights]
-    Source="www.usa.gov/federal-agencies/weights-and-measures-division"
-    Values="lbs,ounces,kilos,grams"
-```
-
-!!! Note
-    When the units of measure are defined in-line, then *environmental overrides can be used to specify and override the units of measure in the configuration.toml file*.  However, since the Uom is a map, the unit of measure category must already exist in order to be overridden.  In the example above, you could provide an environmental override to replace the `Source` or `Values` of `Uom.weights` but you could not add a new section for `Uom.speed` with new `Source` and `Values` as it does not exist in the original configuration file.  In other words, env overrides allow you to change existing configuration but not add new configuration.
 
 #### Specifying Validation on or off
-Additionally, in either external or inline definition, a configuration option for unit of measure validation being `on` or `off` will be provided (note `Validation` in both example A and B above).  The units of measure or the location of the UoM file is static, but the ability to turn validation on/off is dynamic and therefore in the writable area of configuration.  For backward compatibility, validation will be off by default.
+Additionally, in metadata's configuration, a configuration option for unit of measure validation being `on` or `off` will be provided (note `Validation` in both example above).  The location of the UoM file is static, but the ability to turn validation on/off is dynamic and therefore in the writable area of configuration.  For backward compatibility, validation will be off by default.
 
 !!! Note
     `on` and `off` are specified by boolean values `true` and `false` in the configuration file.
 
-Again, when a device resource does not have a `units` specified, this is still considered "valid".  So in reality, the diagram below specifies how validation is done by core metadata.
-
-![image](EdgeX_UoM_Validation.png)
-
 ### Validation of the Units of Measure
 
-Core metadata will read the units of measure from its configuration (either inline or from the specified external file).  Like all configuration information, this data will be stored in the configuration service (Consul today) on initial startup of the core metadata service.
+Core metadata will read the units of measure from its configuration file.  Like all configuration information, this data will be stored in the configuration service (Consul today) on initial startup of the core metadata service.
 
 When validation is turned `on` (Writable.UoM.validation is set to true), all device profile `units` (in device resource, device properties) will be validated against the list of units of measure by core metadata.  In other words, when a device profile is created or updated or when a device resource is added or updated via the core metadata API, the units specified in the device resource's `units` field (see resource example below) will be checked against the valid list of UoM provided via core metadata configuration.  If the `units` value matches any one of the configuration units of measure, then the device resource is considered valid - allowing the create or update operation to continue.  
+
+![image](EdgeX_UoM_Validation.png)
 
 If the `units` value does not match any one of the configuration units of measure, then the device profile or device resource operation (create or update) is rejected (error code 500 is returned) and an appropriate error message is returned in the response to the caller of the core metadata API.
 
@@ -138,7 +114,7 @@ deviceResources:
     units: "C"    ## core metadata checks this value against its list of valid units of measure
 ```
 
-By checking the `units` property of the device resources (on creation or updates of the device profile or create/update of the device resources), and rejecting any additions or changes that include non-valid units of measure, then we can be assured that all readings created by the device service will contain valid units by default (assuming that validation of the units of measure is always on) or that the units are inconsequential (when the `units` field is not specified for a device resource).
+By checking the `units` property of the device resources (on creation or updates of the device profile or create/update of the device resources), and rejecting any additions or changes that include non-valid units of measure, then we can be assured that all readings created by the device service will contain valid units by default (assuming that validation of the units of measure is always on) or that the units are inconsequential (when the `units` field is not specified for a device resource).  This means, the units in a reading do not need to be validated separately.
 
 ## Considerations
 
@@ -146,7 +122,7 @@ By checking the `units` property of the device resources (on creation or updates
 
 Based on discussion in the Core WG meeting of 2/3/22, it was decided that without validation and some valid list of actual UoM, the ADR was just adding metadata to the profile and thus did not even rise to the level of "significant" architectural decision.  It was further felt that in order to really provide any value to adopters and to get adherence to their chosen units of measure, EdgeX had to allow for a valid list of units of measure to be specified and be used to check profile units - but in a way that is easy to configure/provide without having to rebuild a service for example.  If the units of measure were defined just in the standard configuration file, it would make it hard to change this list in deployments. 
 
-This new UoM ADR is the result of that discussion.  In general, it specifies, through adopter provided configuration, the exact unit of measures that are allowed for the EdgeX instance and any optional reference (such as a specification) where those units are defined.  It does so through either core metadata configuration (inline) or via an external file making it easier to change.
+This new UoM ADR is the result of that discussion.  In general, it specifies, through adopter provided configuration, the exact unit of measures that are allowed for the EdgeX instance and any optional reference (such as a specification) where those units are defined.  It does so through a separate core metadata configuration file making it easier to change.
 
 ### Use of SenML
 
@@ -182,9 +158,12 @@ In the future, validation may be turned `on` or `off` per device service; allowi
 
 In the future, additional criteria may be added to the unit of measure information to all for more specific (or allowing more granularity) validation.  For example, the category of units of measure could be specified in a device resource so that a profile's units are validated against specific sources or collections of unit of measure.
 
-Use of URI to specify the unit of measures, when using external UoM definitions, is novel with regard to providing EdgeX information.  Per core working group of 2/17/22 and then again at the monthly architect's meeting of 2/28/22, we may look to use a URI to specify an external configuration file to specify UoM in the future.  Indeed, URIs may be used (an EdgeX 3.0 consideration) to point to device profiles, configuration files, and other information in the future.  This would even allow multiple EdgeX instances to use the same configuration or profile (multiple EdgeX instances using the same URI to use a shared profile for example).
+Use of URI to specify the unit of measures file was discussed.  This would be novel with regard to providing EdgeX information.  Per core working group of 2/17/22 and then again at the monthly architect's meeting of 2/28/22, we may look to use a URI to specify a configuration file to specify UoM in the future.  Indeed, URIs may be used (an EdgeX 3.0 consideration) to point to device profiles, configuration files, and other information in the future.  This would even allow multiple EdgeX instances to use the same configuration or profile (multiple EdgeX instances using the same URI to use a shared profile for example).  However, it was deemed scope creep and too much to do for this first iteration.
+
+Initially, this ADR allowed for the UoM to also or alternately to be defined in the standard metadata service configuration file (`configuration.toml').  During the Core WG meeting of 3/3/22, it was decided to simplify the design and strictly limit UoM to a separate configuration file.  If future use cases or adopters request inline definition, this can be implemented in a future release.
 
 ## Consequences
+
 - Validation could impact performance.  Therefore allowing it to be turned on or off is critical to some use cases.  However, it will only impact performance of profile creation/updates (and associated device resources) in core metadata.
 
 ## References
