feat(adr): update status to approved and update the TOC
Signed-off-by: jpwhitemn <jpwhite_mn@yahoo.com>

--- a/docs_src/design/adr/core/0022-UoM.md
+++ b/docs_src/design/adr/core/0022-UoM.md
@@ -2,7 +2,7 @@
 
 ## Status
 
-**Proposed** (as of 2/9/22)
+**Approved** by TSC Vote on 3/16/2022
 
 This ADR began under a different ADR pull request.  The prior ADR recommended a UoM per device resource and just allowed for the association of an arbitrary set of unit of measure references against the resource.  However, it did not include any specific units of measure or validation of those units against the actual profiles (and ultimately the associated readings). See the [previous UoM ADR](https://github.com/edgexfoundry/edgex-docs/pull/386) for details and prior debate.
 
