feat!: Update UoM doc for v3 changes
BREAKING CHANGE: Update UoM doc to use yaml instead of toml format.

Signed-off-by: bruce <weichou1229@gmail.com>

--- a/docs_src/design/adr/core/0022-UoM.md
+++ b/docs_src/design/adr/core/0022-UoM.md
@@ -32,38 +32,48 @@ Therefore, EdgeX chooses not to select or adopt a unit of measure specification,
 
 ### Specifying the Units of Measure
 
-Units of measure allowed by the instance of EdgeX will be specified in a configuration file (in TOML format called `uom.toml` by default).  Note:  the UoM configuration is a separate configuration TOML file (separate from the metadata service configuration file - `configuration.toml`).  
+Units of measure allowed by the instance of EdgeX will be specified in a configuration file (in YAML format called `uom.yaml` by default).  Note:  the UoM configuration is a separate configuration YAML file (separate from the metadata service configuration file - `configuration.yaml`).  
+
+!!! edgey "EdgeX 3.0"
+    For EdgeX 3.0 the UoM definition file is changed to YAML instead of TOML format.
 
 The units of measure in the configuration file can be attributed, optionally, to a specification, document, or other UoM definition source.  The `source` only helps provide the location of documentation about the origins and details of the units specified for the reader, but it will not be used or checked by EdgeX.  An optional default source can be provided at the top level configuration (as shown in the examples below) so that other sources are only needed when there are specific units used that are not found in the default source.
 
-The units of measure can be categorized for better organization and to allow for different sources to be specified for different units.  The categories are defined by the TOML section names (the UoM dot labels).
+The units of measure can be categorized for better organization and to allow for different sources to be specified for different units.  The categories are defined by the YAML section names (the UoM dot labels).
 
-**Sample TOML unit of measure configuration**
+**Sample YAML unit of measure configuration**
 
-``` toml
-[Uom]
-    Source="reference to source for all UoM if not specified below"
-    [Uom.temperature]
-    Source="www.weather.com"
-    Values="C,F,K"
-    [Uom.weights]
-    Source="www.usa.gov/federal-agencies/weights-and-measures-division"
-    Values="lbs,ounces,kilos,grams"
+``` yaml
+Source: reference to source for all UoM if not specified below
+Units:
+  temperature:
+    Source: www.weather.com
+    Values:
+      - C
+      - F
+      - K
+  weights:
+    Source: www.usa.gov/federal-agencies/weights-and-measures-division
+    Values:
+      - lbs
+      - ounces
+      - kilos
+      - grams
 ```
 
 #### Specifying the UoM File Location
 
-The location of the UoM file will be specified in core metadata's configuration (currently in `res/configuration.toml`) - see example A below.  
+The location of the UoM file will be specified in core metadata's configuration (currently in `res/configuration.yaml`) - see example A below.  
 
 **Example Metadata Configuration - location of of the UoM configuration file**
-``` toml
-[Writable]
-    [Writable.UoM]
-    Validation=false  ## false (meaning off) by default
+``` yaml
+Writable:
+  UoM:
+    Validation: false  ## false (meaning off) by default
 
 ## in the non-writable area - example file specified to units of measure
-[UoM]
-    UoMFile="./res/uom.toml"  # the UoMFile location can be either absolute or relative path location
+UoM:
+  UoMFile: ./res/uom.yaml  # the UoMFile location can be either absolute or relative path location
 ```
 
 The location of the UoM file should point to an accessible file (relative to application executable or absolute path).  The file must be something that the service can reach (ex: in shared volume, volume mount, etc.) in order to allow for the adopter to provide the units of measure independently during configuration/setup of the EdgeX instance without requiring a build of the metadata service or a reconstruction of the Docker image/container.
@@ -110,7 +120,7 @@ deviceResources:
   properties:
     valueType: "Float32"
     readWrite: "R"
-    scale: "0.1"
+    scale: 0.1
     units: "C"    ## core metadata checks this value against its list of valid units of measure
 ```
 
@@ -160,7 +170,7 @@ In the future, additional criteria may be added to the unit of measure informati
 
 Use of URI to specify the unit of measures file was discussed.  This would be novel with regard to providing EdgeX information.  Per core working group of 2/17/22 and then again at the monthly architect's meeting of 2/28/22, we may look to use a URI to specify a configuration file to specify UoM in the future.  Indeed, URIs may be used (an EdgeX 3.0 consideration) to point to device profiles, configuration files, and other information in the future.  This would even allow multiple EdgeX instances to use the same configuration or profile (multiple EdgeX instances using the same URI to use a shared profile for example).  However, it was deemed scope creep and too much to do for this first iteration.
 
-Initially, this ADR allowed for the UoM to also or alternately to be defined in the standard metadata service configuration file (`configuration.toml').  During the Core WG meeting of 3/3/22, it was decided to simplify the design and strictly limit UoM to a separate configuration file.  If future use cases or adopters request inline definition, this can be implemented in a future release.
+Initially, this ADR allowed for the UoM to also or alternately to be defined in the standard metadata service configuration file (`configuration.yaml').  During the Core WG meeting of 3/3/22, it was decided to simplify the design and strictly limit UoM to a separate configuration file.  If future use cases or adopters request inline definition, this can be implemented in a future release.
 
 ## Consequences
 
